# pydrink

./: .gitignore  DEV.md  LICENSE.txt  Makefile  README.md  _drink  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: python-app.yml
extras/: README.md  _drink  drinkrefresh  zshaliases
src/pydrink/: config.py  drink.py  git.py  log.py  obj.py
tests/pydrink/: config.py  conftest.py  git.py  obj.py  test_config.py  test_drink.py  test_git.py  test_obj.py
