[tool.poetry]
name = "pydrink"
version = "0.2.0"
description = "Python implementation of drink dotfile management system"
authors = ["Sebastian Stark <sstark@mailbox.org>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
rich-argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]  
pytest = "*"
mypy = "^1.9.0"
debugpy = "^1.8.1"

[tool.poetry.scripts]
drink = "pydrink.drink:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests/pydrink/*",
]
