[tool.poetry]
name = "pydrink"
version = "0.3.1a3"
description = "Distributed Reusage of Invaluable Nerd Kit (dotfile management)"
authors = ["Sebastian Stark <sstark@mailbox.org>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/sstark/pydrink"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
rich-argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]  
pytest = "*"
mypy = "^1.9.0"
debugpy = "^1.8.1"
coverage = "^7.4.4"

[tool.poetry.scripts]
drink = "pydrink.drink:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests/pydrink/*",
]
pythonpath = [
    "src"
]
