[project]
name = "pydrink"
version = "0.3.3"
description = "Distributed Reusage of Invaluable Nerd Kit (dotfile management)"
authors = [{ name = "Sebastian Stark", email = "sstark@mailbox.org" }]
requires-python = ">=3.9, <4"
readme = "README.md"
license = "ISC"
dependencies = [
    "rich>=13.7.1,<14",
    "rich-argparse>=1.4.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydrink"]

[project.urls]
Repository = "https://github.com/sstark/pydrink"

[project.scripts]
drink = "pydrink.drink:cli"

[dependency-groups]
dev = [
    "pytest",
    "mypy>=1.9.0,<2",
    "debugpy>=1.8.1,<2",
    "coverage>=7.4.4,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests/pydrink/*",
]
pythonpath = [
    "src"
]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
